[package]
name = "bass-rs"
version = "0.1.0"
authors = ["Vurv <56230599+Vurv78@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["lib"]

[build-dependencies]
cc = "1.0.68"
bindgen = "0.58.1"

[features]
default = []

garrysmod = []
no-link = [] # Don't link to bass.dll, just generate bindings.